...
                    .unredacted()
                
                ScrollView {
                    VStack(spacing: 5) {
                        VStack {
                            HStack(spacing: 5) {
                                Text("Net Worth")
                                    .font(.title2.weight(.medium))
                                
                                Spacer()
                                
                                Text(sm.currencySymbols ? currencyCode.currencySymbol : currencyCode)
                                    .foregroundColor(tm.selectedTheme.tertiaryLabel)
...
    }
}

extension WalletView {
    var header: some View {
        HStack {
            Text("Wallets")
                .font(.largeTitle)
                .fontWeight(.semibold)
            
            Spacer()
            
            Button(action: {
...
